<resources>
    <string name="app_name">SmartFit</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="news">News</string>
    <string name="bookmark">Bookmark</string>
    <string name="email_validation">Invalid email format</string>
    <string name="invalid_email">Invalid email address</string>
    <string name="example_email_format">example@gmail.com</string>
    <string name="example_nameAccount">Ujang</string>
    <string name="open_camera">Camera</string>
    <string name="open_galery">Galery</string>
    <string name="title_capture_camera">Capture or Select a Photo to start</string>
    <string name="btn_next_to_result">Next</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="enter_name_signup">type your name</string>
    <string name="label_name_signup">Name</string>
    <string name="enter_password_signup">type your password</string>
    <string name="label_password_signup">Password</string>
    <string name="enter_email_signup">type your email</string>
    <string name="label_email_signup">Email</string>
    <string name="title_signup_page">Sign Up</string>
    <string name="label_logout_setting">Logout</string>
    <string name="label_account_setting">Account</string>
    <string name="label_language_setting">Language</string>
    <string name="title_setting_page">Setting</string>
    <string name="explanation_history_colors">Review your past outfit recommendations and explore the styles you\'ve saved. Keep track of your fashion journey effortlessly.</string>
    <string name="title_history_page">Your History</string>
    <string name="explanation_home_page">Discover outfits that match your skin tone and highlight your natural beauty effortlessly.</string>
    <string name="example_email_home_page">Username</string>
    <string name="title_welcome_home_page">Welcome, to SmartFit!</string>
    <string name="explanation_news_page">Discover outfit inspirations tailored to your style and skin tone. Keep up with the latest trends to inspire your style and Stay confident with the latest trends and outfit ideas.</string>
    <string name="title_news_page">Latest Fashion Trends</string>
    <string name="title_signIn_login">Sign In</string>
    <string name="label_email_login">Email</string>
    <string name="label_password_login">Password</string>
    <string name="tv_forgot_password_login">Forgot Password?</string>
    <string name="label_signUp1">Don’t have any account?</string>
    <string name="label_signUp2">Sign Up</string>
    <string name="btn_signIn_login">Sign In</string>
    <string name="btn_signInGoogle_login">Sign In with Google</string>
    <string name="tv_or_login">OR</string>
    <string name="todo">TODO</string>
    <string name="btn_next_welcome">Next</string>
    <string name="tv_skip_welcome">Skip</string>
    <string name="desc_welcome">Description Welcome</string>
    <string name="tv_get_started_welcome">Get Started</string>
    <string name="label_email_forgotPw">Email</string>
    <string name="btn_reset_password_forgotPw">Reset Password</string>
    <string name="tv_type_your_email_edt">type your email</string>
    <string name="tv_invalid_email_format_edt">Invalid email format</string>
    <string name="tv_type_your_name_edt">type your name</string>
    <string name="tv_invalid_name_format_edt">Name must have at least 4 characters</string>
    <string name="tv_type_your_password_edt">type your password</string>
    <string name="tv_invalid_password_format_edt">Password must have 6 characters</string>
    <string name="btn_let_s_start_home">Let\'s Start</string>
    <string name="desc_home2">Discover the ideal outfits tailored specifically to your skin tone, so you can always look and feel your best.</string>
    <string name="title_home">Find Your Perfect Outfit Based on Your Skin Tone</string>
    <string name="btn_retake_camera2">Retake</string>
    <string name="title_select_gender">Select Gender</string>
    <string name="tv_female_gender">Female</string>
    <string name="tv_male_gender">Male</string>
    <string name="title_select_outfit_type_gender">Select Outfit Type</string>
    <string name="tv_casual_gender">Casual</string>
    <string name="tv_vintage_gender">Vintage</string>
    <string name="tv_pajamas_gender">Pajamas</string>
    <string name="tv_streetwear_gender">Streetwear</string>
    <string name="tv_wedding_gender">Wedding</string>
    <string name="tv_sportwear_gender">Sportwear</string>
    <string name="tv_formal_gender">Formal</string>
    <string name="tv_products_and_recommendations_result">Products and Recommendations</string>
    <string name="tv_seasonal_color_result">Seasonal Color</string>
    <string name="tv_dark_colors_result">Dark Colors</string>
    <string name="tv_light_colors_result">Light Colors</string>
    <string name="tv_skin_tone_result">Skin Tone</string>
    <string name="tv_seasonal_description_result">Seasonal Description</string>
    <string name="tv_seasonal_probability_result">Seasonal Probability</string>
    <string name="tv_skin_tone_hex_result">Skin Tone Hex</string>
    <string name="tv_skin_tone_probability_result">Skin Tone Probability</string>
    <string name="tv_timestamp_result">Timestamp</string>
    <string name="btn_finish_result">Finish</string>
    <string name="desc_news">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="tv_seasonal_color_history">Seasonal Color</string>
    <string name="tv_seasonal_description_history">Seasonal Description</string>
    <string name="tv_clothing_type_history">Clothing Type</string>
    <string name="tv_timestamp_history">Timestamp</string>
    <string name="btn_delete_history">Delete</string>
    <string name="title_logout">Logout</string>
    <string name="logout_message">Are you sure you want to logout?</string>
    <string name="logout_yes">Yes</string>
    <string name="logout_no">No</string>
    <string name="delete_account_title">Delete Account</string>
    <string name="delete_account_message">Are you sure you want to delete your account? This action cannot be undone.</string>
    <string name="delete_account_positive">Yes</string>
    <string name="delete_account_negative">No</string>
    <string name="reauth_failed_title">Re-authentication Failed</string>
    <string name="reauth_failed_message">Please sign in again and try deleting your account.</string>
    <string name="reauth_id_token_failed_title">Failed to get ID token</string>
    <string name="reauth_id_token_failed_message">ID token is null.</string>
    <string name="reauth_google_account_failed_title">No Google Sign-In Account Found</string>
    <string name="reauth_google_account_failed_message">Please sign in with Google again.</string>
    <string name="reauth_email_not_found_message">Email not found for re-authentication.</string>
    <string name="reauth_unsupported_provider_message">Unsupported authentication provider.</string>
    <string name="reauth_positive">Authenticate</string>
    <string name="reauth_negative">Cancel</string>
    <string name="delete_data_failed_message">Failed to delete user data.</string>
    <string name="delete_success_title">Account Deleted</string>
    <string name="delete_success_message">Your account and history have been successfully deleted.</string>
    <string name="delete_failed_title">Deletion Failed</string>
    <string name="unknown_error_message">Unknown error occurred.</string>
    <string name="ok">OK</string>
    <string name="success_logout">You have successfully logged out.</string>
    <string name="email_exists_title">Email Already Registered</string>
    <string name="email_exists_message">The email address %1$s is already registered. Please login or use a different email address.</string>
    <string name="login_button">Login</string>
    <string name="try_again_button">Try Again</string>
    <string name="registration_failed_title">Registration Failed</string>
    <string name="registration_failed_message">Unknown error occurred.</string>
    <string name="verification_email_failed_title">Verification Email Failed</string>
    <string name="verification_email_failed_message">Unknown error occurred.</string>
    <string name="database_error_title">Database Error</string>
    <string name="database_error_message">Unknown error occurred.</string>
    <string name="registration_successful_title">Registration Successful</string>
    <string name="registration_successful_message">A verification email has been sent to your email address. Please verify your email before logging in.</string>
    <string name="login_failed_title">Login Failed</string>
    <string name="login_failed_message">Unknown error occurred.</string>
    <string name="input_error_title">Input Error</string>
    <string name="invalid_email_message">Please enter a valid email address.</string>
    <string name="invalid_password_message">Password must be 6 characters long.</string>
    <string name="google_sign_in_failed_title">Google sign in failed</string>
    <string name="google_sign_in_failed_message">Unknown error occurred.</string>
    <string name="authentication_failed_title">Authentication Failed</string>
    <string name="authentication_failed_message">Unknown error occurred.</string>
    <string name="email_not_verified_title">Email Not Verified</string>
    <string name="email_not_verified_message">Please verify your email before logging in.</string>
    <string name="ok_button">OK</string>
    <string name="sign_up_button">Sign Up</string>
    <string name="forgot_password_button">Forgot Password</string>
    <string name="email_empty_message">Please enter your email address.</string>
    <string name="error_title">Error</string>
    <string name="email_not_registered_message">Email address is not registered.</string>
    <string name="database_access_error_message">Failed to access database. Please try again later.</string>
    <string name="reset_password_title">Reset Password</string>
    <string name="reset_password_success_message">A password reset link has been sent to your email.</string>
    <string name="reset_password_failed_title">Reset Password Failed</string>
    <string name="failed_to_capture_image_message">Failed to capture image.</string>
    <string name="no_image_selected_message">No image selected from gallery.</string>
    <string name="permission_denied_title">Permission Denied</string>
    <string name="permission_denied_message">Please allow the necessary permissions.</string>
    <string name="camera_error_message">Could not create file for photo: %1$s</string>
    <string name="crop_error_title">Crop Error</string>
    <string name="unknown_crop_error_message">Unknown error occurred.</string>
    <string name="seasonal_color_label">Seasonal Color</string>
    <string name="skin_tone_label">Skin Tone</string>
    <string name="seasonal_description">Seasonal Description</string>
    <string name="seasonal_probability_label">Seasonal Probability: %.2f%%</string>
    <string name="skin_tone_probability_label">Skin Tone Probability: %.2f%%</string>
    <string name="skin_tone_hex_label">Skin Tone Hex: %1$s</string>
    <string name="timestamp_label">Timestamp: %1$s</string>
    <string name="scan_result_ready">Scan Result Ready!</string>
    <string name="scan_result_message">Hasil scan telah tersedia. Cek rekomendasi gaya terbaru Anda sekarang!</string>
    <string name="prediction_failed_title">Prediction Failed</string>
    <string name="prediction_failed_message">The prediction process failed. Please try scanning with a different image.</string>
    <string name="retry">Retry</string>
    <string name="cancel">Cancel</string>
    <string name="tv_already_have_an_account_register">Already have an account?</string>
    <string name="tvsign_in_register">Sign In</string>
</resources>